--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+html{
+    font-size: 14px;
+}
+
 @font-face {
     font-family: DINRegularAlternate;
     src: url("../fonts/DIN RegularAlternate.ttf");
@@ -75,19 +79,20 @@ body{
 
 #separatorLine{
     border: 1px solid rgb(235, 49, 78);
-    top: 4px;
 }
 
 #diamond1{
-    left: 1px;
+    top: 1px;
+    left: -9px;
 }
 
 #diamond2{
-    right: 1px;
+    top: -11px;
+    left: 749px;
 }
 
 #BreakIcon{
-    padding: 0% 15%;
+    padding: 0% 20%;
 }
 
 #BreakIcon > img{
@@ -112,7 +117,7 @@ body{
 
 .infographycText {
     text-transform: uppercase;
-    margin-top: 75px;
+    margin-top: 60px;
     font-family: DINCondensedBold;
     font-size: 1.125rem;
     color: #fff;
@@ -145,7 +150,7 @@ body{
 }
 
 #footer{
-    height: 200px;
+    height: 250px;
     background-color: rgb(235, 49, 78);
 }
 
@@ -164,11 +169,8 @@ body{
     border: 1px solid #fff;
 }
 
-.graphLabel1{
-    margin-left: 5%;
-}
 .graphLabel2{
-    margin-left: 20%;
+    margin-left: 10%;
 }
 
 #SkillsBar, #DetailsSecondLine{
@@ -201,25 +203,25 @@ body{
     border-style: solid;
     border-color: #fff transparent transparent #fff;
     border-image: none;
-    border-radius: 115px;
-    width: 230px;
-    height: 230px;
+    border-radius: 130px;
+    width: 260px;
+    height: 260px;
     margin: 0px auto;
     position: relative;
     animation: 5s linear 0s normal none infinite running spin;
 }
 
 #circleIn{
-    top: -225px;
+    top: -245px;
     background-color: transparent;
     border-right: 5px solid rgba(0, 183, 229, 0.9);
     border-width: 1px;
     border-style: solid;
     border-color: #fff transparent #fff transparent;
     border-image: none;
-    border-radius: 110px;
-    width: 220px;
-    height: 220px;
+    border-radius: 115px;
+    width: 230px;
+    height: 230px;
     margin: 0px auto;
     position: relative;
     animation: 10s linear 0s normal none infinite running spinoff;
@@ -227,8 +229,8 @@ body{
 
 #circleRed{
     background-size: 210px;
-    left: 43px;
-    top: -440px;
+    left: 42px;
+    top: -465px;
     position: relative;
     width: 210px;
     height: 210px;
@@ -268,7 +270,7 @@ body{
 .footerForm #messageField{
     background-color: transparent;
     border: 0px solid;
-    width: 140px;
+    width: 200px;
     color: #CCC;
     margin-left: 5px;
     resize: none;
@@ -285,12 +287,12 @@ body{
 }
 
 #MessagePanel{
-    height: 88px;
+    height: 111px;
 }
 
 #SeparatorFooter{
     border-left: 1px solid #000;    
-    height: 80px;
+    height: 105px;
     float: left;
     position: relative;
     top: 15px;
@@ -322,7 +324,7 @@ body{
 }
 
 #SeparatorFooter #diamond4 { 
-    top: 62px;
+    top: 85px;
     left: -5px; 
 }
 
