[UPD] Changed argins to pixel

--- a/css/home.css
+++ b/css/home.css
@@ -68,11 +68,11 @@ body{
 }
 
 #titleBlock{
-    margin-top: 21%;
+    margin-top: 150px;
 }
 
 #descriptionBlock{
-    margin-top: 25%;
+    margin-top: 210px;
 }
 
 #separatorBlock{
