--- a/css/home.css
+++ b/css/home.css
@@ -76,26 +76,41 @@ body{
     margin-top: 21%;
 }
 
+#detailsContainer{
+    width: 600px;
+}
+
+.detailsBlock {
+    position: relative;
+    float: left;
+    margin: 15px 0px 15px 35px;
+    width: 260px;
+    height: 410px;
+}
+
 #descriptionBlock{
     margin-top: 25%;
 }
 
 #separatorBlock{
+    width: 600px;
+    height: 20px;
     margin-top: 5%;
 }
 
 #separatorLine{
+    width: 600px;
     border: 1px solid rgb(235, 49, 78);
 }
 
 #diamond1{
     top: 1px;
-    left: -9px;
+    left: -1px;
 }
 
 #diamond2{
+    left: 591px;
     top: -11px;
-    left: 749px;
 }
 
 #BreakIcon{
@@ -127,14 +142,21 @@ body{
     font-family: DINCondensedBold;
     font-size: 1.125rem;
     color: #fff;
-    margin-top: 20%;
+    width: 50%;
+    height: 50%;
+    position: relative;
+    float: left;
 }
 
 #firstInfographyc {
     margin-left: 26%;
 }
 
-
+.circleInnerText {
+    width: 140px;
+    height: 140px;
+    margin: 60px 75px;
+}
 
 .detailsDescription {
     font-family: DINRegularAlternate;
@@ -170,12 +192,11 @@ body{
 
 .levelBar{
 
-    width: 100%;
 }
 
 .levelBarContainer{
-    margin-right: 10%;
-    width: 15%;
+    margin-right: 18px;
+    width: 28px;
 }
 
 .bar{
@@ -191,16 +212,28 @@ body{
     margin-top: 10%;
 }
 
+#SkillsBar {
+    width: 190px;
+    height: 190px;
+}
+
 #ai {
-    margin-top: 24%;
+    margin-top: 50px;
 }
 
 #id {
-    margin-top: 55%; 
+    margin-top: 115px; 
 }
 
 #fl {
-    margin-top: 11%; 
+    margin-top: 24px; 
+}
+
+#InfographySection {
+    margin-top: 10%;
+    width: 260px;
+    height: 260px;
+
 }
 
 #circleOut{
@@ -210,9 +243,9 @@ body{
     border-style: solid;
     border-color: #fff transparent transparent #fff;
     border-image: none;
-    border-radius: 130px;
-    width: 80%;
-    height: 80%;
+    border-radius: 140px;
+    height: 260px;
+    width: 260px;
     margin: 0px auto;
     position: relative;
     animation: 5s linear 0s normal none infinite running spin;
@@ -223,8 +256,7 @@ body{
 }
 
 #circleIn{
-    left: 0%;
-    top: 5%;
+    margin: 9px;
     background-color: transparent;
     border-right: 5px solid rgba(0, 183, 229, 0.9);
     border-width: 1px;
@@ -232,9 +264,8 @@ body{
     border-color: #fff transparent #fff transparent;
     border-image: none;
     border-radius: 100%;
-    width: 89%;
-    height: 89%;
-    margin: 0px auto;
+    width: 240px;
+    height: 240px;
     position: relative;
     animation: 3s linear 0s normal none infinite running spinoff;
     -moz-animation: 3s linear 0s normal none infinite running spinoff;
@@ -244,12 +275,11 @@ body{
 }
 
 #circleRed{
-    top: 4%;
-    left: 4%;
+    margin: 10px;
     background-size: 100%;
     position: relative;
-    width: 92%;
-    height: 92%;
+    width: 220px;
+    height: 220px;
     background-repeat: no-repeat;
     background-image: url(../images/infographic_red.png);
     animation: 5s linear 0s normal none infinite running spin;
@@ -258,11 +288,6 @@ body{
     -ms-animation: 5s linear 0s normal none infinite running spin;
     -o-animation: 5s linear 0s normal none infinite running spin;
 }
-
-#InfographySection{
-    margin-top: 10%;
-}
-
 
 
 .footerTitle{
