--- a/css/home.css
+++ b/css/home.css
@@ -192,7 +192,7 @@ body{
 }
 
 #footer{
-    height: 250px;
+    height: 21rem;
     background-color: rgb(235, 49, 78);
     margin-top: 20%
 }
@@ -301,7 +301,7 @@ body{
     font-family: DINCondensedBold;
     font-size: 2.375rem;
     text-transform: uppercase;
-    margin-top: 5%;
+    margin-top: 40px;
     color:#000;
 }
 
