[UPD] Changed back to relative, and refactored the separator

--- a/css/home.css
+++ b/css/home.css
@@ -80,9 +80,9 @@ body{
     margin-top: 21%;
 }
 
-#detailsContainer{
+/*#detailsContainer{
     width: 600px;
-}
+}*/
 
 #footerContainer {
     width: 960px;
@@ -90,9 +90,11 @@ body{
 }
 
 .detailsBlock {
-    margin: 15px 0px 15px 35px;
-    width: 260px;
+/*    margin: 15px 0px 15px 35px;
+    width: 260px;*/
     height: 410px;
+/*    position: relative;
+    float: left;*/
 }
 
 #descriptionBlock{
@@ -100,24 +102,11 @@ body{
 }
 
 #separatorBlock{
-    width: 600px;
+    /*width: 600px;*/
     height: 20px;
     margin-top: 5%;
-}
-
-#separatorLine{
-    width: 600px;
-    border: 1px solid rgb(235, 49, 78);
-}
-
-#diamond1{
-    top: 1px;
-    left: -1px;
-}
-
-#diamond2{
-    left: 591px;
-    top: -11px;
+    background: url("../images/separator.png") no-repeat;
+    background-size: 100%;
 }
 
 #BreakIcon{
@@ -130,7 +119,7 @@ body{
 }
 
 .detailsTitle {  
-    margin-top: 5%;
+    margin-top: 20px;
     font-family: DINCondensedBold;
     font-size: 2.375rem;
     color: rgb(235, 49, 78);
@@ -138,7 +127,7 @@ body{
 
 .detailsHeader {
     text-transform: uppercase;
-    margin-top: 5%;
+    margin-top: 15px;
     font-family: DINCondensedBold;
     font-size: 1.750rem;
     color: #fff;
@@ -315,7 +304,7 @@ body{
 .footerForm #messageField{
     background-color: transparent;
     border: 0px solid;
-    width: 75%;
+    width: 70%;
     color: #CCC;
     margin-left: 5px;
     resize: none;
